test/modules/figueroa/DuplicateConfigVars/RandomNumber.good
RandomNumber.chpl:19: In function 'main':
RandomNumber.chpl:22: warning: whole array assignment has been serialized (see note in $CHPL_HOME/STATUS)
RandomNumber.chpl:11: error: functions cannot return nested iterators or loop expressions
